Layout tweaks and mods
Playing with some different layout styles.

--- a/src/assets/includes/global/section-nav/sample.html
+++ b/src/assets/includes/global/section-nav/sample.html
@@ -7,8 +7,8 @@
             <li><a href="#">link 3</a></li>
             <li><a href="#">link 4</a>
                 <ul>
-                    <li><a href="#">link 4 a</a>
-                    </li>
+                    <li><a href="#">link 4 a</a></li>
+                    <li><a class="active" href="#">link 2</a></li>
                     <li><a href="#">link 4 b</a></li>
                 </ul>
             </li>
