index 2 column content fix
Fixed the main content body 2 column layout.

--- a/src/assets/sass/sections/_nim-develop.scss
+++ b/src/assets/sass/sections/_nim-develop.scss
@@ -12,6 +12,17 @@
 /////////////////
 //// Layouts ////
 /////////////////
+.qg-secondary-content{
+	@extend .list-sm-indent;
+}
+#qg-index-links{
+	@extend .list-sm-indent;
+	@extend .row;
+
+	&> div, &> span{
+		@extend .col-md-6;
+	}
+}
 
 // Nav //
 .qg-section-nav .qg-inner ul li li a {
